# python-limitlessled

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yaml
examples/: pipeline.py
limitlessled/: __init__.py  bridge.py  pipeline.py  presets.py  util.py
limitlessled/group/: __init__.py  dimmer.py  eightzone.py  rgbcct.py  rgbw.py  rgbww.py  white.py  wrgb.py
limitlessled/group/commands/: __init__.py  legacy.py  v6.py
tests/: test_bridge.py  test_commands.py  test_groups.py  test_legacy_commands.py  test_limitlessled.py  test_util.py
